--- a/build.gradle
+++ b/build.gradle
@@ -162,7 +162,7 @@ repositories {
 }
 
 ext {
-  log4JVersion = "2.25.3"
+  ext['log4j2.version'] = '2.25.3' // CVE-2025-68161
   logbackVersion = "1.5.19"
 }
 
