FACT-2481-Add-user-controller-and-service (#56)
* FACT-2481-Add-user-controller-and-service

* update service endpoint

* Update checks

* address PR comments

* update according to PR comments

* Update application-test.yaml

* Move clearing court lock functionality

* update exist check calls

* Update CourtService.java

* added functional tests

* updated log4JVersion

* updated log4JVersion to ext['log4j2.version'] = '2.25.3' // CVE-2025-68161

* fixed out of bound exception

* added solutions to comments

* changed log4j2 version

* reverted to initial modification

* add correct version

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Dan-Marius Bradea <bradeadanmarius@gmail.com>

--- a/src/integrationTest/resources/application-test.yaml
+++ b/src/integrationTest/resources/application-test.yaml
@@ -2,6 +2,8 @@ spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:postgresql:16:///fact
+user:
+  retention-period: 365
 os:
   url: https://api.os.uk
   key: a-key
