--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,6 +76,9 @@ spring:
 dbMigration:
   runOnStartup: ${RUN_DB_MIGRATION_ON_STARTUP:true}
 
+user:
+  retention-period: 365
+  
 os:
   key: ${OS_KEY}
   url: https://api.os.uk
